--- a/Infraero.Relprev.WebUi/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/Infraero.Relprev.WebUi/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -26,7 +26,7 @@
                     <div class="form-group mb-3">
                         <label>Email</label>
                         <div class="input-group input-group-icon">
-                            <input asp-for="Input.Email" type="text" class="form-control form-control-lg" />
+                            <input asp-for="Input.Email" type="text" class="form-control form-control-lg" readonly/>
                             <span class="input-group-addon">
                                 <span class="icon icon-lg">
                                     <i class="fa fa-user"></i>
