--- a/Infraero.Relprev.WebUi/Views/Empresa/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Empresa/Create.cshtml
@@ -27,14 +27,16 @@
                                    title="Por favor informe a empresa órgão público" required />
                         </div>
                     </div>
+
+
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">CPNJ <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <input type="text" name="CNPJ" class="form-control" data-input-mask="99.999.999/9999-99"
+                            <input type="text" id="cnpj" name="cnpj" class="form-control" data-input-mask="99.999.999/9999-99"
                                    v-model="params.cnpj"
                                    v-on:blur="ExisteCnpj"
                                    placeholder="eg.: CNPJ da empresa / órgão público" maxlength="18"
-                                   title="Por favor informe o CNPJ da empresa / órgão público" required />
+                                   required />
                         </div>
                     </div>
                     <div class="form-group row">
@@ -44,11 +46,11 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-phone"></i>
                                 </span>
-                                <input name="Telefone" id="Telefone" data-plugin-masked-input="" 
+                                <input name="Telefone" id="Telefone" data-plugin-masked-input=""
                                        style="z-index: auto;"
-                                       data-input-mask="(99) 999-9999" 
-                                       placeholder="eg.: Telefone da empresa" 
-                                       Title="Por favor informe o telefone da empresa" 
+                                       data-input-mask="(99) 999-9999"
+                                       placeholder="eg.: Telefone da empresa"
+                                       Title="Por favor informe o telefone da empresa"
                                        class="form-control"
                                        title="Por favor informe o telefone da empresa" required>
                             </div>
@@ -73,7 +75,8 @@
 }
 @section Scripts {
     <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
+    <script src="~/vendor/jquery-mask/jquery.mask.js"></script>
     <script src="~/js/empresa.js"></script>
-    
+
 }
 
