--- a/Infraero.Relprev.WebUi/Views/Usuario/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Usuario/Create.cshtml
@@ -8,6 +8,7 @@
     <div class="col-lg-12">
         @using (@Html.BeginForm("Create", "Usuario", FormMethod.Post, new { id = "form" }))
         {
+            
             <section class="card">
                 <header class="card-header">
                     <div class="card-actions">
@@ -18,7 +19,7 @@
                     <h2 class="card-title">Cadastrar Usuário</h2>
 
                 </header>
-                <div class="card-body">
+                <div id="vUsuario" class="card-body" data-loading-overlay>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Nome <span class="required">*</span></label>
                         <div class="col-sm-9">
@@ -30,7 +31,10 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Cpf <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <input id="cpf" name="cpf" type="text" value="" class="form-control" placeholder="eg.: Número do CPF do usuário"
+                            <input id="cpf" name="cpf"
+                                   v-model="params.cpf"
+                                   v-on:blur="ExisteCpf"
+                                   type="text" value="" class="form-control" placeholder="eg.: Número do CPF do usuário"
                                    maxlength="14" />
 
                         </div>
@@ -78,7 +82,8 @@
                         <div class="col-lg-9">
                             <select class="form-control populate select2" name="ddlUnidadeInfraestrutura" id="ddlUnidadeInfraestrutura"
                                     title="Por favor selecione uma unidade de infraestrutura." required
-                                    asp-for="CodUnidadeInfraestrutura" asp-items="Model.ListUnidadeInfraestrutura">
+                                    asp-for="CodUnidadeInfraestrutura"
+                                    asp-items="Model.ListUnidadeInfraestrutura">
                                 <option value="">Selecionar Unidade de infraestrutura</option>
                             </select>
                         </div>
@@ -119,55 +124,29 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.0/jquery.mask.js"></script>
     <script src="~/js/usuario.js"></script>
     <script>
-        jQuery.validator.addMethod("cpf", function (value, element) {
-            value = jQuery.trim(value);
+        
+        var notify = @ViewBag.NotifyMessage;
+        var messagem = @ViewBag.Notify;
 
-            value = value.replace('.', '');
-            value = value.replace('.', '');
-            cpf = value.replace('-', '');
-            while (cpf.length < 11) cpf = "0" + cpf;
-            var expReg = /^0+$|^1+$|^2+$|^3+$|^4+$|^5+$|^6+$|^7+$|^8+$|^9+$/;
-            var a = [];
-            var b = new Number;
-            var c = 11;
-            for (i = 0; i < 11; i++) {
-                a[i] = cpf.charAt(i);
-                if (i < 9) b += (a[i] * --c);
-            }
-            if ((x = b % 11) < 2) { a[9] = 0 } else { a[9] = 11 - x }
-            b = 0;
-            c = 11;
-            for (y = 0; y < 10; y++) b += (a[y] * c--);
-            if ((x = b % 11) < 2) { a[10] = 0; } else { a[10] = 11 - x; }
-
-            var retorno = true;
-            if ((cpf.charAt(9) != a[9]) || (cpf.charAt(10) != a[10]) || cpf.match(expReg)) retorno = false;
-
-            return this.optional(element) || retorno;
-
-        }, "Informe um CPF válido");
-
-
-        $(document).ready(function () {
-            var $numCpf = $("#cpf");
-            $numCpf.mask('000.000.000-00', { reverse: true });
-
-            var $numTel = $("#NumTelefone");
-            $numTel.mask('(00) 0000-0000');
-
-            $("#form").validate({
-                rules: {
-                    cpf: { cpf: true, required: true }
-                },
-                messages: {
-                    cpf: { cpf: 'CPF inválido', required: "Por favor informe o número do CPF do usuário." }
-                }
-                , submitHandler: function (form) {
-                    alert('ok');
-                }
+        if (notify===0) {
+            new PNotify({
+                title: 'Usuário',
+                text: messagem,
+                type: 'success'
             });
-        });
-
+        }else if (notify === 1) {
+            new PNotify({
+                title: 'Usuário',
+                text: messagem,
+                type: 'warning'
+            });
+        }else if (notify === 2) {
+            new PNotify({
+                title: 'Usuário',
+                text: messagem,
+                type: 'error'
+            });
+        }
 
     </script>
 }
