--- a/Infraero.Relprev.WebUi/Views/Usuario/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Usuario/Index.cshtml
@@ -44,8 +44,7 @@
                                     <td>@Html.DisplayFor(modelItem => item.NomUsuario)</td>
                                     <td>@Html.DisplayFor(modelItem => item.NumCpf)</td>
                                     <td>@Html.DisplayFor(modelItem => item.DscEmail)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.CodPerfil)</td>
-                                    <td></td>
+                                    <td>@Html.DisplayFor(modelItem => item.DscPerfil)</td>
                                     <td class="actions">
                                         <a data-toggle="tooltip" data-placement="top" title="Editar" asp-action="Edit" asp-controller="Usuario" asp-route-id="@item.CodUsuario" class="on-default edit-row" style='color: #eea236'><i class="fa fa-pencil"></i></a>
                                         <a data-toggle="tooltip" data-placement="top" title="Excluir" asp-action="Delete" asp-controller="Usuario" asp-route-id="@item.CodUsuario" class="on-default remove-row" style='color: #d43f3a'><i class="fa fa-trash-o"></i></a>
@@ -59,50 +58,13 @@
         </form>
     </div>
 </div>
-<div id="modalIcon" class="modal-block modal-header-color modal-block-danger mfp-hide">
-    <section class="card">
-        <header class="card-header">
-            <h2 class="card-title">Exclusão</h2>
-        </header>
-        <div class="card-body">
-            <div class="modal-wrapper">
-                <div class="modal-icon">
-                    <i class="fa fa-question-circle"></i>
-                </div>
-                <div class="modal-text">
-                    <p class="mb-0">Tem certeza que deseja <b>excluir</b> esse registro?</p>
-                </div>
-            </div>
-        </div>
-        <footer class="card-footer">
-            <div class="row">
-                <div class="col-md-12 text-right">
-                    <button class="btn btn-success modal-confirm">Sim &nbsp;&nbsp;<i class="fa fa-thumbs-o-up"></i></button>
-                    <button class="btn btn-danger modal-dismiss">Não &nbsp;&nbsp;<i class="fa fa-thumbs-o-down"></i></button>
-                </div>
-            </div>
-        </footer>
-    </section>
-</div>
 @section CssSpecificVendor {
     <link rel="stylesheet" href="~/vendor/datatables/media/css/dataTables.bootstrap4.css" />
-    <link rel="stylesheet" href="~/vendor/pnotify/pnotify.custom.css" />
-
 }
 @section Scripts {
-
-
-
     <script src="~/vendor/datatables/media/js/jquery.dataTables.min.js"></script>
     <script src="~/vendor/datatables/media/js/dataTables.bootstrap4.min.js"></script>
-    <script src="~/vendor/datatables/extras/TableTools/Buttons-1.4.2/js/dataTables.buttons.min.js"></script>
-    <script src="~/vendor/datatables/extras/TableTools/Buttons-1.4.2/js/buttons.bootstrap4.min.js"></script>
-    <script src="~/vendor/datatables/extras/TableTools/Buttons-1.4.2/js/buttons.html5.min.js"></script>
-    <script src="~/vendor/datatables/extras/TableTools/Buttons-1.4.2/js/buttons.print.min.js"></script>
-    <script src="~/vendor/datatables/extras/TableTools/JSZip-2.5.0//jszip.min.js"></script>
-    <script src="~/vendor/datatables/extras/TableTools/pdfmake-0.1.32/pdfmake.min.js"></script>
-    <script src="~/vendor/datatables/extras/TableTools/pdfmake-0.1.32/vfs_fonts.js"></script>
-    <script src="~/js/empresa.js"></script>
+    <script src="~/js/formatTable.js"></script>
 
     <script>
         /*
