versao perfil acesso

--- a/Infraero.Relprev.WebUi/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/Infraero.Relprev.WebUi/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -1,11 +1,10 @@
 ﻿@page
 @model AccessDeniedModel
-@{
-    ViewData["Title"] = "Access denied";
-    ViewData["SubTitle"] = "Invalid attempt";
-    ViewData["IconClass"] = "pe-7s-close-circle";
-    ViewData["BackLink"] = "Back to Dashboard";
-    ViewData["Container"] = "center";
-}
 
-<p class="text-danger">You do not have access to this resource.</p>
+
+
+<section class="card mb-4">
+    <div class="card-body  text-center">
+        <img src="~/img/error_403.jpg" />
+    </div>
+</section>
