--- a/Infraero.Relprev.WebUi/Views/Empresa/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Empresa/Edit.cshtml
@@ -43,7 +43,7 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-phone"></i>
                                 </span>
-                                <input name="telefone" id="telefone" data-plugin-masked-input="" data-input-mask="(99) 999-9999" value="@Model.NumTelefone" placeholder="eg.: Número de telefone para atendimento" class="form-control">
+                                <input name="telefone" id="telefone" data-plugin-masked-input="" data-input-mask="(99) 999-9999" value="@Model.NumTelefone" placeholder="eg.: Número de telefone para atendimento" class="form-control" />
                             </div>
                         </div>
                     </div>
