--- a/Infraero.Relprev.WebUi/Views/UnidadeInfraestrutura/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/UnidadeInfraestrutura/Index.cshtml
@@ -29,7 +29,7 @@
                         <thead>
                             <tr>
                                 <th class="text-center">Cod-Sigla</th>
-                                <th class="text-center">Unidade de atendimento</th>
+                                <th class="text-center">Unidade de Infraestrutura</th>
                                 <th class="text-center">Endereço</th>
                                 <th class="text-center">Início vigência</th>
                                 <th class="text-center">Fim vigência</th>
