--- a/Infraero.Relprev.WebUi/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/Infraero.Relprev.WebUi/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -40,7 +40,7 @@
                             <label class="float-left">Nova Senha</label>
                         </div>
                         <div class="input-group input-group-icon">
-                            <input asp-for="Input.Password" type="password" class="form-control form-control-lg" />
+                            <input id="Input.Password" asp-for="Input.Password" type="password" class="form-control form-control-lg" />
                             <span class="input-group-addon">
                                 <span class="icon icon-lg">
                                     <i class="fa fa-lock"></i>
@@ -54,7 +54,7 @@
                             <label class="float-left">Confirmar Senha</label>
                         </div>
                         <div class="input-group input-group-icon">
-                            <input asp-for="Input.ConfirmPassword" type="password" class="form-control form-control-lg " />
+                            <input id="Input.ConfirmPassword" asp-for="Input.ConfirmPassword" type="password" class="form-control form-control-lg " />
                             <span class="input-group-addon">
                                 <span class="icon icon-lg">
                                     <i class="fa fa-lock"></i>
