--- a/Infraero.Relprev.WebUi/Views/Perfil/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Perfil/Create.cshtml
@@ -1,9 +1,8 @@
-﻿@{
+﻿@model Infraero.Relprev.CrossCutting.Models.PerfilModel
+@{
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-
 <div class="row">
     <div class="col-lg-12">
         @using (@Html.BeginForm("Create", "Perfil", FormMethod.Post, new { id = "form" }))
@@ -26,13 +25,23 @@
 
                         </div>
                     </div>
-                    @*<div class="form-group row">
-                        <label class="col-sm-3 control-label text-sm-right pt-2">Descrição do Perfil <span class="required">*</span></label>
-                        <div class="col-sm-9">
-                            <input type="text" name="DscPerfil" class="form-control" placeholder="eg.: Descrição do Perfil" title="Por favor informe Descrição do Perfil" required />
-
+                    @foreach (var modulo in Model.ListModulo)
+                    {
+                        <div class="form-group row">
+                            <label class="col-lg-3 control-label text-lg-right pt-2 col-lg-3">Módulo @modulo.NomModulo</label>
+                            <div class="col-lg-9">
+                                @{ string[] ListFuncionalidades = modulo.ListFuncionalidades.FirstOrDefault().NomFuncionalidade.Split(',');
+                                    foreach (var funcionalidade in ListFuncionalidades)
+                                    {
+                                        <label class="col-sm-2 control-label text-sm-right pt-2">@funcionalidade</label>
+                                        <div class="switch switch-sm switch-dark">
+                                            <input type="checkbox" id="@modulo.NomModulo@funcionalidade" name="@modulo.NomModulo@funcionalidade" data-plugin-ios-switch checked="checked" />
+                                        </div>
+                                    }
+                                }
+                            </div>
                         </div>
-                    </div>*@
+                    }
                 </div>
                 <footer class="card-footer">
                     <div class="row justify-content-end">
@@ -50,38 +59,57 @@
 </div>
 @section CssSpecificVendor {
 }
-    @section Scripts {
+@section Scripts {
+    <script src="~/vendor/ios7-switch/ios7-switch.js"></script>
+    <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
+    <script>
+        (function () {
 
-        <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
-        <script>
-            (function () {
+            'use strict';
 
-                'use strict';
-
-                // basic
-                $("#form").validate({
-                    highlight: function (label) {
-                        $(label).closest('.form-group').removeClass('has-success').addClass('has-error');
-                    },
-                    success: function (label) {
-                        $(label).closest('.form-group').removeClass('has-error');
-                        label.remove();
-                    },
-                    errorPlacement: function (error, element) {
-                        var placement = element.closest('.input-group');
-                        if (!placement.get(0)) {
-                            placement = element;
-                        }
-                        if (error.text() !== '') {
-                            placement.after(error);
-                        }
+            // basic
+            $("#form").validate({
+                highlight: function (label) {
+                    $(label).closest('.form-group').removeClass('has-success').addClass('has-error');
+                },
+                success: function (label) {
+                    $(label).closest('.form-group').removeClass('has-error');
+                    label.remove();
+                },
+                errorPlacement: function (error, element) {
+                    var placement = element.closest('.input-group');
+                    if (!placement.get(0)) {
+                        placement = element;
                     }
+                    if (error.text() !== '') {
+                        placement.after(error);
+                    }
+                }
+            });
+
+        }).apply(this, [jQuery]);
+
+        // iosSwitcher
+        (function ($) {
+
+            'use strict';
+
+            if (typeof Switch !== 'undefined' && $.isFunction(Switch)) {
+
+                $(function () {
+                    $('[data-plugin-ios-switch]').each(function () {
+                        var $this = $(this);
+
+                        $this.themePluginIOS7Switch();
+                    });
                 });
 
-            }).apply(this, [jQuery]);
+            }
 
-        </script>
-    }
+        }).apply(this, [jQuery]);
+
+    </script>
+}
 
 
 
