--- a/Infraero.Relprev.WebUi/Views/Usuario/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Usuario/Edit.cshtml
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        @using (@Html.BeginForm("Create", "Usuario", FormMethod.Post))
+        @using (@Html.BeginForm("Edit", "Usuario", FormMethod.Post, new { id = "form" }))
         {
             <section class="card">
                 <header class="card-header">
@@ -16,15 +16,16 @@
                         <a href="#" class="card-action card-action-dismiss" data-card-dismiss></a>
                     </div>
 
-                    <h2 class="card-title">Cadastrar Usuário</h2>
+                    <h2 class="card-title">Editar Usuário</h2>
 
                 </header>
-                <div class="card-body">
+                <div id="vUsuario" class="card-body" data-loading-overlay>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Nome <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <input type="text" name="NomUsuario" class="form-control" placeholder="eg.: Descrição completa do nome do usuário" 
+                            <input type="text" name="NomUsuario" class="form-control" placeholder="eg.: Descrição completa do nome do usuário"
                                    maxlength="60"
+                                   value="@Model.Usuario.NomUsuario"
                                    title="Por favor informe a descrição completa do nome do usuário." required />
                         </div>
                     </div>
@@ -33,7 +34,8 @@
                         <div class="col-sm-9">
                             <input type="text" name="NumCpf" class="form-control" placeholder="eg.: Número do CPF do usuário"
                                    maxlength="14"
-                                   title="Por favor informe o número do CPF do usuário" required />
+                                   value="@Model.Usuario.NumCpf"
+                                   title="Por favor informe o número do CPF do usuário" required readonly />
                         </div>
                     </div>
                     <div class="form-group row">
@@ -45,7 +47,8 @@
                                 </span>
                                 <input type="text" name="EndEmail" class="form-control" placeholder="eg.: Endereço eletrônico válido do usuário"
                                        maxlength="40"
-                                       title="Por favor informe um endereço eletrônico válido do usuário" required />
+                                       value="@Model.Usuario.Email"
+                                       title="Por favor informe um endereço eletrônico válido do usuário" required readonly />
                             </div>
                         </div>
                         <label class="col-lg-1 control-label text-lg-right pt-2">Telefone<span class="required">*</span></label>
@@ -54,9 +57,10 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-phone"></i>
                                 </span>
-                                <input id="NumTelefone" placeholder="eg.: Telefone de contato do usuário" class="form-control"
+                                <input id="NumTelefone" name="NumTelefone" placeholder="eg.: Telefone de contato do usuário" class="form-control"
                                        maxlength="14"
-                                       title="Por favor informe o telefone de contato do usuário" required>
+                                       value="@Model.Usuario.NumTelefone"
+                                       title="Por favor informe o telefone de contato do usuário" required />
                             </div>
                         </div>
                     </div>
@@ -79,7 +83,7 @@
                         <div class="col-lg-9">
                             <select class="form-control populate select2" name="ddlUnidadeInfraestrutura" id="ddlUnidadeInfraestrutura"
                                     title="Por favor selecione uma unidade de infraestrutura." required
-                                    asp-for="CodUnidadeInfraestrutura" asp-items='@(new SelectList(string.Empty, "CodUnidadeInfraestrutura", "DscLocal"))'>
+                                    asp-for="CodUnidadeInfraestrutura" asp-items='Model.ListUnidadeInfraestrutura'>
                                 <option value="">Selecionar Unidade de infraestrutura</option>
                             </select>
                         </div>
@@ -115,33 +119,104 @@
     <link rel="stylesheet" href="~/vendor/select2-bootstrap-theme/select2-bootstrap.min.css" />
 }
 @section Scripts {
+    <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
     <script src="~/vendor/select2/js/select2.js"></script>
-
+    <script src="~/vendor/jquery-mask/jquery.mask.js"></script>
     <script>
-        // Select2
+
         (function ($) {
 
             'use strict';
 
-            if ($.isFunction($.fn['select2'])) {
+            var $select = $(".select2").select2({
+                allowClear: true
+            });
 
-                $(function () {
-                    $('[data-plugin-selectTwo]').each(function () {
-                        var $this = $(this),
-                            opts = {};
+            $(".select2").each(function () {
+                var $this = $(this),
+                    opts = {};
 
-                        var pluginOptions = $this.data('plugin-options');
-                        if (pluginOptions)
-                            opts = pluginOptions;
+                var pluginOptions = $this.data('plugin-options');
+                if (pluginOptions)
+                    opts = pluginOptions;
 
-                        $this.themePluginSelect2(opts);
+                $this.themePluginSelect2(opts);
+            });
+
+            /*
+             * When you change the value the select via select2, it triggers
+             * a 'change' event, but the jquery validation plugin
+             * only re-validates on 'blur'*/
+
+            $select.on('change', function () {
+                $(this).trigger('blur');
+            });
+
+            $("#ddlEmpresa").change(function () {
+
+                var url = "GetUnidadeByIdEmpresa";
+
+                var ddlSource = "#ddlEmpresa";
+
+                $.getJSON(url,
+                    { id: $(ddlSource).val() },
+                    function (data) {
+                        var items = '';
+                        $("#ddlUnidadeInfraestrutura").empty;
+                        $.each(data,
+                            function (i, row) {
+                                items += "<option value='" + row.value + "'>" + row.text + "</option>";
+                            });
+                        $("#ddlUnidadeInfraestrutura").html(items);
                     });
-                });
+            });
 
-            }
+            var $numTel = $("#NumTelefone");
+            $numTel.mask('(00) 0000-0000');
+
+            $("#form").validate({
+                rules: {
+                    "EndEmail": {
+                        required: true,
+                        email: true
+                    },
+                    cpf: { cpf: true, required: true }
+                },
+                messages: {
+                    "EndEmail": {
+                        required: "Por favor informe o endereço eletrônico válido do usuário.",
+                        email: "Formato de e-mail inválido."
+                    },
+                    cpf: { cpf: 'Formato de CPF inválido', required: "Por favor informe o número do CPF do usuário." }
+                },
+                highlight: function (label) {
+                    $(label).closest('.form-group').removeClass('has-success').addClass('has-error');
+                },
+                success: function (label) {
+                    $(label).closest('.form-group').removeClass('has-error');
+                    label.remove();
+                },
+                errorPlacement: function (error, element) {
+                    var placement = element.closest('.input-group');
+                    if (!placement.get(0)) {
+                        placement = element;
+                    }
+                    if (error.text() !== '') {
+                        placement.after(error);
+                    }
+                }
+            });
+
 
         }).apply(this, [jQuery]);
 
+        (function ($) {
+            $('#ddlEmpresa').val(@Model.Usuario.CodEmpresa);
+            $('#ddlEmpresa').trigger('change');
+            $('#ddlUnidadeInfraestrutura').val(@Model.Usuario.CodUnidadeInfraestrutura);
+            $('#ddlUnidadeInfraestrutura').trigger('change');
+            $('#ddlPerfil').val('@Model.Usuario.CodPerfil');
+            $('#ddlPerfil').trigger('change');
+        }).apply(this, [jQuery]);
     </script>
 }
-
