--- a/Infraero.Relprev.WebUi/Views/Usuario/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Usuario/Index.cshtml
@@ -43,11 +43,11 @@
                                 <tr>
                                     <td>@Html.DisplayFor(modelItem => item.NomUsuario)</td>
                                     <td>@Html.DisplayFor(modelItem => item.NumCpf)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.DscEmail)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.DscPerfil)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Email)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.NomPerfil)</td>
                                     <td class="actions">
-                                        <a data-toggle="tooltip" data-placement="top" title="Editar" asp-action="Edit" asp-controller="Usuario" asp-route-id="@item.CodUsuario" class="on-default edit-row" style='color: #eea236'><i class="fa fa-pencil"></i></a>
-                                        <a data-toggle="tooltip" data-placement="top" title="Excluir" asp-action="Delete" asp-controller="Usuario" asp-route-id="@item.CodUsuario" class="on-default remove-row" style='color: #d43f3a'><i class="fa fa-trash-o"></i></a>
+                                        <a data-toggle="tooltip" data-placement="top" title="Editar" asp-action="Edit" asp-controller="Usuario" asp-route-id="@item.CodUsuarioLogin" class="on-default edit-row" style='color: #eea236'><i class="fa fa-pencil"></i></a>
+                                        <a data-toggle="tooltip" data-placement="top" title="Excluir" asp-action="Delete" asp-controller="Usuario" asp-route-id="@item.CodUsuarioLogin" class="on-default remove-row" style='color: #d43f3a'><i class="fa fa-trash-o"></i></a>
                                     </td>
                                 </tr>
                             }
@@ -76,7 +76,29 @@ Theme Version: 	2.0.0
         (function ($) {
 
             'use strict';
+            var crub = @ViewBag.CrudMessage;
 
+            if (crub===1) {
+                new PNotify({
+                    title: 'Usuário',
+                    text: 'Cadastro realizado com sucesso!',
+                    type: 'success'
+                });
+            }else if (crub === 2) {
+                new PNotify({
+                    title: 'Usuário',
+                    text: 'Dados alterados com sucesso.',
+                    type: 'warning',
+                    icon: 'fa fa-pencil'
+                });
+            }else if (crub === 3) {
+                new PNotify({
+                    title: 'Usuário',
+                    text: 'Registro excluído com sucesso.',
+                    type: 'error',
+                    icon: 'fa fa-trash-o'
+                });
+            }
             /*
             Basic
             */
